--- a/css/materialize.css
+++ b/css/materialize.css
@@ -756,7 +756,7 @@
 }
 
 .light-blue {
-  background-color: #03a9f4 !important;
+  background-color: #2196F3 !important;
 }
 
 .light-blue-text {
@@ -793,10 +793,6 @@
 
 .light-blue-text.text-lighten-2 {
   color: #4fc3f7 !important;
-}
-
-.light-blue.lighten-1 {
-  background-color: #29b6f6 !important;
 }
 
 .light-blue-text.text-lighten-1 {
@@ -1647,20 +1643,24 @@
   background-color: #ffab00 !important;
 }
 
+.row.center {
+    color: #c5c5c5;
+}
+
 .amber-text.text-accent-4 {
   color: #ffab00 !important;
 }
 
 .orange {
-  background-color: #ff9800 !important;
+  background-color: #2196F3 !important;
 }
 
 .orange-text {
-  color: #ff9800 !important;
+  color: #2196F3 !important;
 }
 
 .orange.lighten-5 {
-  background-color: #fff3e0 !important;
+  background-color: #2196F3 !important;
 }
 
 .orange-text.text-lighten-5 {
@@ -1680,7 +1680,7 @@
 }
 
 .orange-text.text-lighten-3 {
-  color: #ffcc80 !important;
+  color: #ECEFF1 !important;
 }
 
 .orange.lighten-2 {
@@ -2056,7 +2056,7 @@
 }
 
 .grey-text.text-lighten-4 {
-  color: #f5f5f5 !important;
+  color: #263238 !important;
 }
 
 .grey.lighten-3 {
@@ -2128,7 +2128,7 @@
 }
 
 .white-text {
-  color: #FFFFFF !important;
+  color: #263238 !important;
 }
 
 .transparent {
@@ -2237,6 +2237,8 @@ html {
  */
 body {
   margin: 0;
+  font-family: 'Product Sans', Arial, sans-serif;
+  background-color: #263238;
 }
 
 /* HTML5 display definitions
@@ -3448,11 +3450,6 @@ input[type=range] + .thumb {
   padding-top: 0;
 }
 
-.row {
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 20px;
-}
 
 .row:after {
   content: "";
@@ -4112,7 +4109,7 @@ nav .button-collapse i {
 
 nav .brand-logo {
   position: absolute;
-  color: #fff;
+  color: #263238;
   display: inline-block;
   font-size: 2.1rem;
   padding: 0;
@@ -4173,8 +4170,8 @@ nav ul li.active {
 
 nav ul a {
   transition: background-color .3s;
-  font-size: 1rem;
-  color: #fff;
+  font-size: 25px;
+  color: #263238;
   display: block;
   padding: 0 15px;
   cursor: pointer;
@@ -4297,7 +4294,7 @@ html {
   line-height: 1.5;
   font-family: "Roboto", sans-serif;
   font-weight: normal;
-  color: rgba(0, 0, 0, 0.87);
+  color: #c5c5c5;
 }
 
 @media only screen and (min-width: 0) {
